[package]
name = "playlisttools"
version = "0.1.0"
authors = ["David Bosschaert <david.bosschaert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1

[[bin]]
name = "playlisttools"
path = "src/bin/main.rs"

# Also: strip <binary_name>
